--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
     "caniuse-lite": "^1.0.30001695",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.0.6",
+    "motion": "^12.3.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
