--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
   "name": "sociact-frontend",
-  "description": "Landing page template utilizing Shadcn, React, Typescript, and Tailwind CSS for rapid development and responsive design.",
-  "author": {
-    "name": "Leopoldo Miranda",
-    "email": "leomirandadev@gmail.com",
-    "url": "https://github.com/leoMirandaa"
-  },
+  "description": "Sociact is a platform that helps you manage your social media accounts and content.",
   "license": "MIT",
-  "keywords": [
+    "keywords": [
     "react",
     "typescript",
     "shadcn",
@@ -31,14 +26,18 @@
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@react-oauth/google": "^0.12.1",
+    "@types/html2canvas": "^0.5.35",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "caniuse-lite": "^1.0.30001695",
