--- a/package.json
+++ b/package.json
@@ -41,12 +41,13 @@
     "@react-oauth/google": "^0.12.1",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+    "@tabler/icons-react": "^3.30.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "caniuse-lite": "^1.0.30001695",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.4.0",
+    "framer-motion": "^12.4.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
@@ -57,6 +58,7 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
