--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sociact-frontend",
   "description": "Sociact is a platform that helps you manage your social media accounts and content.",
   "license": "MIT",
-    "keywords": [
+  "keywords": [
     "react",
     "typescript",
     "shadcn",
@@ -30,6 +30,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-navigation-menu": "^1.2.0",
+    "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
@@ -43,7 +44,9 @@
     "caniuse-lite": "^1.0.30001695",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.1",
+    "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
@@ -54,8 +57,10 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.15",
