--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-oauth/google": "^0.12.1",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "@types/html2canvas": "^0.5.35",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
@@ -50,7 +53,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.474.0",
     "mini-svg-data-uri": "^1.4.4",
-    "motion": "^12.3.1",
+    "motion": "^12.4.1",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
