--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,10 @@
     "routes": [
       { "handle": "filesystem" },
       { "src": "/.*", "dest": "/index.html" }
-    ]
-  }
+    ],
+    "build": {
+      "env": {
+        "NPM_FLAGS": "--legacy-peer-deps --force"
+      }
+    }
+}
