node engine updated in package json

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,7 @@
 legacy-peer-deps=true
 node-linker=hoisted
-public-hoist-pattern[]=* 
+public-hoist-pattern[]=*
+shamefully-hoist=true
+strict-peer-dependencies=false
+auto-install-peers=true
+engine-strict=false 
