--- a/package.json
+++ b/package.json
@@ -38,24 +38,26 @@
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-oauth/google": "^0.12.1",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
+    "@tabler/icons-react": "^3.30.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "@types/html2canvas": "^0.5.35",
-    "@splidejs/react-splide": "^0.7.12",
-    "@splidejs/splide-extension-auto-scroll": "^0.5.3",
-    "@tabler/icons-react": "^3.30.0",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.9",
     "caniuse-lite": "^1.0.30001695",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
     "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.4.1",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
@@ -68,8 +70,8 @@
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
-    "sonner": "^1.7.4",
     "simplex-noise": "^4.0.3",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5"
