changed name to social automation

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sociact-frontend",
-  "description": "Sociact is a platform that helps you manage your social media accounts and content.",
+  "name": "Social Automation-frontend",
+  "description": "Social Automation is a platform that helps you manage your social media accounts and content.",
   "license": "MIT",
   "keywords": [
     "react",
